Bug 327074 - Allow RLE bitmaps with extra pixels per row to render. r=tnikkel

Differential Revision: https://phabricator.services.mozilla.com/D159028